cluster/addons/davinci/K8S/chrome-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.21.0 ()
  creationTimestamp: null
  labels:
    io.kompose.service: chrome
  name: chrome
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: chrome
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.21.0 ()
      creationTimestamp: null
      labels:
        io.kompose.service: chrome
    spec:
      containers:
      - image: selenium/standalone-chrome
        imagePullPolicy: ""
        name: chrome
        resources: {}
      restartPolicy: Always
      serviceAccountName: ""
      volumes: null
status: {}
