cluster/addons/davinci/K8S/davinci-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.21.0 ()
  creationTimestamp: null
  labels:
    io.kompose.service: davinci
  name: davinci
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: davinci
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.21.0 ()
      creationTimestamp: null
      labels:
        io.kompose.service: davinci
    spec:
      containers:
      - args:
        - ./bin/docker-entrypoint.sh
        - mysql:3306
        - --
        - start-server.sh
        image: edp963/davinci:v0.3.0-beta.9
        imagePullPolicy: ""
        name: davinci
        resources:
          requests:
          #  cpu: "200m"
            memory: "512Mi"
          limits:
          #  cpu: "500m"
            memory: "1024Mi"
        ports:
        - containerPort: 8080
        resources: {}
        volumeMounts:
        # - mountPath: /opt/davinci/logs
        #   name: davinci-logs
        # - mountPath: /opt/davinci/userfiles
        #   name: davinci-userfiles
        - mountPath: /initdb
          name: davinci-initdb
      restartPolicy: Always
      serviceAccountName: ""
      volumes:
      - name: davinci-logs
        emptyDir: {}
      - name: davinci-userfiles
        emptyDir: {}
      - name: davinci-initdb
        persistentVolumeClaim:
          claimName: davinci-initdb
status: {}
