cluster/addons/davinci/K8S/mysql-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.21.0 ()
  creationTimestamp: null
  labels:
    io.kompose.service: mysql
  name: mysql
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: mysql
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.21.0 ()
      creationTimestamp: null
      labels:
        io.kompose.service: mysql
    spec:
      containers:
      - env:
        - name: MYSQL_DATABASE
          value: davinci0.3
        - name: MYSQL_ROOT_PASSWORD
          value: abc123123
        image: mysql:8
        imagePullPolicy: ""
        name: mysql
        resources:
          requests:
            cpu: "200m"
            memory: "256Mi"
          limits:
            cpu: "500m"
            memory: "512Mi"
        resources: {}
        volumeMounts:
        - mountPath: /var/lib/mysql
          name: mysql-data
        - mountPath: /docker-entrypoint-initdb.d
          name: davinci-initdb
          readOnly: true
      restartPolicy: Always
      serviceAccountName: ""
      volumes:
      - name: mysql-data
        persistentVolumeClaim:
          claimName: mysql-data-davinci
      - name: davinci-initdb
        persistentVolumeClaim:
          claimName: davinci-initdb
          readOnly: true
status: {}
