cluster/addons/davinci/K8S/mysql-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.21.0 ()
  creationTimestamp: null
  labels:
    io.kompose.service: mysql
  name: mysql
spec:
  ports:
  - name: "3306"
    port: 3306
    nodePort: 31306
    targetPort: 3306
  type: NodePort
  selector:
    io.kompose.service: mysql
status:
  loadBalancer: {}
